<resources>
    <string name="app_name">iFilm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_add">Add Movie</string>
    <string name="number">number</string>
    <string name="title">title</string>
    <string name="genre">genre</string>
    <string name="popularity">popularity</string>
    <string name="edit">edit</string>
    <string name="example_insert">Example : Lord of The Ring</string>
    <string name="example_genre">Example : Action, Romance, Comedy</string>
    <string name="example_popularity">Example : 6.5</string>
    <string name="rating">Rating :</string>
    <string name="insert_fragment_title">Insert Movie</string>
    <string name="insert">insert</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_join">Mulai Bergabung</string>
    <string name="create_account_detail">buat akunmu sekarang</string>
    <string name="email">Email</string>
    <string name="email_example">example : user@gmail.com</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="fullname_detail">Nama Panjang Kamu</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Sudah Punya Akun ?</string>

    <!--    permission  -->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="directory_permissions">Aplikasi ini membutuhkan izin untuk mengakses penyimpanan kamu</string>
    <string name="welcome">Selamat Datang</string>
    <string name="bottom_background">bottom background</string>
    <string name="top_background">top background</string>
    <string name="wrong_email">Email atau password yang anda masukan salah!</string>
    <string name="sign_in_success">Selamat Datang</string>
    <string name="pick_image_from_directory">pick image from directory</string>
    <string name="list">List</string>
    <string name="empty_input">Mohon Lengkapi Email dan Password Anda</string>
    <string name="empty_notification">Mohon Lengkapi Data</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="profile">profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">sign out</string>
    <string name="fullname_txt">Fullname :</string>
    <string name="email_detail">Email :</string>
    <string name="password_detail">Password :</string>
    <string name="change_password">Ubah Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="old_password">Password Lama</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="error_input_password">Password tidak boleh kosong</string>
    <string name="description">description</string>
    <string name="add_notification">Add Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="enter_title">Enter Title</string>
    <string name="message">Message</string>
    <string name="short_message">Tuliskan Pesan Singkatmu</string>
    <string name="send_notification">Send Notification</string>
    <string name="msg_token_fmt">token formet</string>
    <string name="msg_subscribed">try to subscribe to topic</string>
    <string name="msg_subscribe_failed">cannot subscripe to topik</string>
    <string name="or">or</string>
    <string name="finger_print_sign_up_info">or using finger print</string>
    <string name="splash_screen_url">https://assets9.lottiefiles.com/packages/lf20_cbrbre30.json</string>
</resources>