<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeaderPushNotification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_notification"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".04" />

        <TextView
            android:id="@+id/titleBoxTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/titleBox"
            app:layout_constraintStart_toStartOf="@+id/titleBox"
            app:layout_constraintTop_toBottomOf="@+id/seaderTitle"
            app:layout_constraintVertical_bias=".8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seaderTitle"
            app:layout_constraintVertical_bias=".08"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_title"
                android:textColor="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/titleBox"
            app:layout_constraintStart_toStartOf="@+id/titleBox"
            app:layout_constraintTop_toBottomOf="@+id/titleBox"
            app:layout_constraintVertical_bias=".1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/short_message" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/messageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/messageBox"
            app:layout_constraintStart_toStartOf="@+id/messageBox"
            app:layout_constraintTop_toBottomOf="@+id/titleBox"
            app:layout_constraintVertical_bias=".8" />

        <Button
            android:id="@+id/sendNotificationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_notification"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/messageBox"
            app:layout_constraintStart_toStartOf="@+id/messageBox"
            app:layout_constraintTop_toBottomOf="@+id/messageBox"
            app:layout_constraintVertical_bias=".16" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>