<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ice_white">

        <ImageView
            android:id="@+id/topBGImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_top_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/top_background" />

        <ImageView
            android:id="@+id/bottomBGImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_bottom_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".23"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBGImg"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/bottom_background" />

        <TextView
            android:id="@+id/profileHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".03" />

        <androidx.cardview.widget.CardView
            android:id="@+id/detailProfileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomBGImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBGImg"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent=".8">

            <TextView
                android:id="@+id/detailProfileTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_profile"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/editProfileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomBGImg"
            app:layout_constraintEnd_toEndOf="@+id/detailProfileBtn"
            app:layout_constraintStart_toStartOf="@+id/detailProfileBtn"
            app:layout_constraintTop_toBottomOf="@+id/detailProfileBtn"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/editProfileTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/paradise_pink"
            android:text="@string/sign_out"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomBGImg"
            app:layout_constraintEnd_toEndOf="@+id/editProfileBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editProfileBtn"
            app:layout_constraintTop_toBottomOf="@+id/editProfileBtn"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>