<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ice_white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userPicture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/inset_profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fullnameCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPicture"
            app:layout_constraintVertical_bias="0.06"
            app:layout_constraintWidth_percent=".9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fullnameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:gravity="center"
                    android:text="@string/fullname_txt"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fullnameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:text="@string/fullname"
                    android:textSize="16sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fullnameCard"
            app:layout_constraintStart_toStartOf="@+id/fullnameCard"
            app:layout_constraintTop_toBottomOf="@+id/fullnameCard"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:gravity="center"
                    android:text="@string/email_detail"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/email"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passwordCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailCard"
            app:layout_constraintStart_toStartOf="@+id/emailCard"
            app:layout_constraintTop_toBottomOf="@+id/emailCard"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/password_detail"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/passwordValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:inputType="textPassword"
                    android:text="@string/password"
                    android:textSize="16sp"
                    tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/paradise_pink"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordCard"
            app:layout_constraintStart_toStartOf="@+id/passwordCard"
            app:layout_constraintTop_toBottomOf="@+id/passwordCard"
            app:layout_constraintVertical_bias=".05" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>