<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/insertTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/insert_fragment_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/insertTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="Movie Title :"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/insertTitleField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent=".2" />

            <EditText
                android:id="@+id/insertTitleField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/example_insert"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/insertTitleTxt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/genreInsertTxt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="Genre :"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/insertGenreField"
                app:layout_constraintEnd_toStartOf="@+id/insertGenreField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/insertGenreField" />

            <EditText
                android:id="@+id/insertGenreField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/example_genre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/insertTitleField"
                app:layout_constraintStart_toEndOf="@+id/insertTitleTxt"
                app:layout_constraintTop_toBottomOf="@+id/insertTitleField"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/example_popularity"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/insertGenreField"
                app:layout_constraintStart_toEndOf="@+id/genreInsertTxt"
                app:layout_constraintTop_toBottomOf="@+id/insertGenreField"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/ratingInsertTxt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/rating"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
                app:layout_constraintEnd_toEndOf="@+id/genreInsertTxt"
                app:layout_constraintStart_toStartOf="@+id/genreInsertTxt"
                app:layout_constraintTop_toBottomOf="@+id/insertGenreField" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>